--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2167 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2168 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -310,4 +310,8 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 		the kernel image on amd64 and i386. [maxv 20160515]
 	arm: Add support for i.MX7 SoC. [ryo 20160517]
 	bind: Import version 9.10.4-P1. [christos 20160526]
+	network: Change hostzerobroadcast default to "no". This has has been
+		the default for many years (broadcast to all ones instead to
+		all zeroes), but might affect some really old machines out
+		there [christos 20160527]
 	zoneinfo: Import tzdata2016d. [agc 20160531]
