--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2168 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2169 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -315,3 +315,4 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 		all zeroes), but might affect some really old machines out
 		there [christos 20160527]
 	zoneinfo: Import tzdata2016d. [agc 20160531]
+	ntp: Import ntp 4.2.8p8. [christos 20160603]
