--- a/lib/libc/gen/signal.3
+++ b/lib/libc/gen/signal.3
@@ -1,4 +1,4 @@
-.\"	$NetBSD: signal.3,v 1.24 2004/06/13 19:17:06 lha Exp $
+.\"	$NetBSD: signal.3,v 1.25 2016/06/05 17:16:44 christos Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -29,7 +29,7 @@
 .\"
 .\"     @(#)signal.3	8.3 (Berkeley) 4/19/94
 .\"
-.Dd June 11, 2004
+.Dd June 5, 2016
 .Dt SIGNAL 3
 .Os
 .Sh NAME
@@ -43,6 +43,8 @@
 .\" fix it.
 .Ft void \*(lp*
 .Fn signal "int sig" "void \*(lp*func\*(rp\*(lpint\*(rp\*(rp\*(rp\*(lpint"
+.Ft void \*(lp*
+.Fn bsd_signal "int sig" "void \*(lp*func\*(rp\*(lpint\*(rp\*(rp\*(rp\*(lpint"
 .Sh DESCRIPTION
 This
 .Fn signal
@@ -179,6 +181,7 @@ or
 .Xr sigaltstack 2 ,
 .Xr sigprocmask 2 ,
 .Xr sigsuspend 2 ,
+.Xr bsd_signal 3 ,
 .Xr psignal 3 ,
 .Xr setjmp 3 ,
 .Xr strsignal 3 ,
